Removed unused m_errorHandlingModeReentry from Interpreter https://bugs.webkit.org/show_bug.cgi?id=167726

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-02-02
Reviewed by Yusuke Suzuki.

* interpreter/Interpreter.cpp:
(JSC::Interpreter::Interpreter):
* interpreter/Interpreter.h:

Canonical link: https://commits.webkit.org/184766@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211552 268f45cc-cd09-0410-ab3c-d52691b4dbfc